--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>スキップ可能な動画広告（時間計測付き）</title>
+    <title>研究用</title>
     <style>
         /* 動画コンテナのスタイル */
         .video-container {
@@ -141,4 +141,5 @@
     </script>
 
 </body>
+
 </html>
